assets/css/custom.css
/* ... */
#navbar2 {
  background: none;
  position: fixed;
  bottom: 15px;
  right: -100px;
  width: 100vw;
  xdisplay: block;
  transition: right 0.5s;
  z-index: 20;
}

#navbar a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 15px;
  text-decoration: none;
  font-size: 17px;
}

#navbar a:hover {
  background-color: #ddd;
  color: black;
}

#navbar .link {
color: #0f0b0c;
background-color: #f8d260;
	border-style: solid;
	border-color: #f8d260;
	border-width: 2px;
	padding: 7px 15px;
	border-radius: 25px;
	xletter-spacing: .28em;
	xfont-family: "bebas-neue-pro", sans-serif;
	  font-family: "proxima-nova", sans-serif;
	font-weight: 700;
	font-style: normal;
	font-size: 13px;
	xmargin-right: 14px;
	position: relative;
  float: right;
  margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 50px;
    z-index: 22;
}

#navbar .link:hover {
background-color: #fff;
}

#navbar2 .link {
color: #0f0b0c;
background-color: #f8d260;
	border-style: solid;
	border-color: #f8d260;
	border-width: 2px;
	padding: 7px 15px;
	border-radius: 25px;
	xletter-spacing: .28em;
	  font-family: "proxima-nova", sans-serif;
	font-weight: 700;
	font-style: normal;
	font-size: 13px;
	xmargin-right: 14px;
	position: relative;
  float: right;
  xmargin-top: 10px;
    xmargin-bottom: 10px;
    xmargin-right: 50px;
    xz-index: 22;
    text-decoration: none;
}

#navbar2 .link:hover {
background-color: #fff;
}

#navbar2 .link2 {
  position: relative;
  float: right;
  transition: all .2s ease-in-out;
}

#navbar2 .link2:hover {
  transform: scale(1.1);
}

#top-wrapper {
  display: flex;
  flex-wrap:wrap;
}

#portfolio {
  width: 90%;
  margin:0 auto;
  font-family: "proxima-nova", sans-serif;
  background-color: #FFF;
  xbackground-color: #d5d7d5;
}

#portfolio h1 {
  text-align: center;
}

#portfolio-row {
  display: flex;
  xflex-direction: row;
  xtext-align: center;
  flex-direction: column;
  margin-top: 0;
  margin-bottom: 0;
}

#portfolio-row .flex-video {
  padding: 56.25% 0 0 0;
  position:relative;
  flex: 50%;
  border-radius: .75rem;
  overflow: hidden;
  margin-right: 1%;
  margin-left: 1%;
  margin-top: 1%;
  margin-bottom: 1%;
}

/* Portfolio fade in */

@keyframes fadeInUp {
  from {
    transform: translateY(50px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}
.fade-in-up {
  animation: 0.75s both fadeInUp;
}

/* Portfolio Thumbnails */

#poster-image {
background: url('/assets/video/thumbnail_LFH.webp') center center;
background-size: cover;
bottom: 0;
left: 0;
position: absolute;
right: 0;
top: 0;
visibility: visible;
z-index: 10;
height: 100%;
width: 100%;
}

#hover-image {
  background: url('/assets/video/thumbnail_LFH_HOVER.webp') center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 11;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
}

#hover-image:hover {
  opacity: 1;
}

#poster-image2 {
background: url('/assets/video/thumbnail_LFCH.webp') center center;
background-size: cover;
bottom: 0;
left: 0;
position: absolute;
right: 0;
top: 0;
visibility: visible;
z-index: 10;
height: 100%;
width: 100%;
}

#hover-image2 {
  background: url('/assets/video/thumbnail_LFCH_HOVER.webp') center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 11;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
}

#hover-image2:hover {
  opacity: 1;
}

#poster-image3 {
background: url('/assets/video/thumbnail_AkzoNobel.webp') center center;
background-size: cover;
bottom: 0;
left: 0;
position: absolute;
right: 0;
top: 0;
visibility: visible;
z-index: 10;
height: 100%;
width: 100%;
}

#hover-image3 {
  background: url('/assets/video/thumbnail_AkzoNobel_HOVER.webp') center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 11;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
}

#hover-image3:hover {
  opacity: 1;
}

#poster-image4 {
background: url('/assets/video/thumbnail_StillCreek.webp') center center;
background-size: cover;
bottom: 0;
left: 0;
position: absolute;
right: 0;
top: 0;
visibility: visible;
z-index: 10;
height: 100%;
width: 100%;
}

#hover-image4 {
  background: url('/assets/video/thumbnail_StillCreek_HOVER.webp') center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 11;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
}

#hover-image4:hover {
  opacity: 1;
}

#poster-image5 {
background: url('/assets/video/thumbnail_MelroseIN.webp') center center;
background-size: cover;
bottom: 0;
left: 0;
position: absolute;
right: 0;
top: 0;
visibility: visible;
z-index: 10;
height: 100%;
width: 100%;
}

#hover-image5 {
  background: url('/assets/video/thumbnail_MelroseIN_HOVER.webp') center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 11;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
}

#hover-image5:hover {
  opacity: 1;
}

#poster-image6 {
background: url('/assets/video/thumbnail_NatDoorways.webp') center center;
background-size: cover;
bottom: 0;
left: 0;
position: absolute;
right: 0;
top: 0;
visibility: visible;
z-index: 10;
height: 100%;
width: 100%;
}

#hover-image6 {
  background: url('/assets/video/thumbnail_NatDoorways_HOVER.webp') center center;
  background-size: cover;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  visibility: visible;
  z-index: 11;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
}

#hover-image6:hover {
  opacity: 1;
}
/* ... */

